[tool.poetry]
name = "channel-api"
version = "0.1.0"
description = ""
authors = ["arpentnoir <namlleps.drahcir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
fastapi = "^0.54.2"
web3 = "^5.10.0"
mangum = "^0.9.2"
boto3 = "^1.13.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.11.5"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
